2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Implement coarsening in the Walshaw algorithm. Add Edge:__eq().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add simple force based algorithm based on Hu. Now we have 2-3 to
	compare. Next task: implement the multilevel approach in one of the
	algorithms.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Allow coordinate keys to be registered. Update orient= syntax. In
	particular, the orient/orient' options are parsed in the PGF library
	now, allowing errors to be raised earlier and the Lua code to be less
	error-prone.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add at option to the spring-electrical algorithm to fixate nodes.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Rewrite parseBraces() so that nested braces are properly handled. Nope,
	this is not nice-to-read code. Definitely not.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add /graph drawing/register node coordinate key. This key allows
	coordinate options like at={(x,y)} to be specified for nodes.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add TODOs for the spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Nothing important.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a few notes about the spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add cooling function. Enforce small distance for nodes at same location.
	Also default to 500 iterations max.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add missing component packing file.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Initial work on a serious spring-electrical algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a variety of vector math functions to the Vector class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Allow algorithms to have spaces and - in their name.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- More options, mostly undocumented.
