@@ -125,8 +125,9 @@
 \tikzgraphsset{
   spring electrical layout/.style={
     graph drawing engine,
-    algorithm=standard spring electrical,
-    %algorithm=walshaw spring electrical,
+    %algorithm=standard spring electrical,
+    algorithm=walshaw spring electrical,
+    coarsening=true,
     initial positioning=random,
     random seed=42, % TODO set to 42 by default
   }
