@@ -1,5 +1,11 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Misc logging changes in the walshaw algorithm. Few bugfixes. In
+	particular, the coarsening stops when there are no further edges to be
+	contracted (which happens if the graphs is entirely disconnected).
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Implement coarsening in the Walshaw algorithm. Add Edge:__eq().
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
